Tue Mar 31 17:52:37 BST 2009    Tom Mortimer <tom@lemurconsulting.com>

    * flaxclient.php: Added and fixed code for db document access.
    * _restclient.php: Added code to handle Location response header.
    * unittests/_testrestclient.php: Rewrote mock database as a class for better 
      clarity and easier reference semantics.
    * unittests/test_database.php: Added constructor for tests with real server.
    * unittests/test_fields.php: Added constructor for tests with real server.
    * unittests/runtests.php: Added code for tests with real server.
    * unittests/test_docs.php: Unit tests for database documents.

Wed Mar 18 17:43:26 GMT 2009    Tom Mortimer <tom@lemurconsulting.com>

    * flaxclient.php: Changed API functions to be clearer about overwriting 
      resources.
    * unittests/_testrestclient.php, unittests/test_database.php, 
      unittests/test_fields.php: Updated tests for API changes.

Wed Mar 18 16:23:32 GMT 2009    Tom Mortimer <tom@lemurconsulting.com>

    * unittests/runtests.php: Allow individual test cases to be run.
    * flaxerrors.php: Added FlaxDocumentError class.

Wed Mar 18 13:51:11 GMT 2009    Tom Mortimer <tom@lemurconsulting.com>

    * flaxclient.php: Fixed typo.
    * unittests/_testrestclient.php: Fixed db path pattern.
    * unittests/test_database.php, unittests/test_fields.php, 
      unittests/runtests.php: Added test suite runner.

Wed Mar 18 12:37:47 GMT 2009    Tom Mortimer <tom@lemurconsulting.com>

    * flaxclient.php: Added URL (and '-') encoding to path construction.

Wed Mar 18 12:10:51 GMT 2009    Tom Mortimer <tom@lemurconsulting.com>

    * flaxclient.php:  Modified to work with flax_search_service
    * _restclient.php: Fixed URL error. Throws exception for network problems.
    * unittests/_restclient.php, unittests/_testrestclient.php: Renamed to 
      avoid require() clash.
    * unittests/test_database.php: Modifed to work with flax_search_service.